jwt fix: node polyfills and rollup plugin for buffer issue with vite

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "safe-buffer": "^5.2.1",
     "sass": "^1.70.0"
   },
